--- a/PMS_PROJECT/PMS_PROJECT.csproj
+++ b/PMS_PROJECT/PMS_PROJECT.csproj
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Npgsql" Version="9.0.3" />
     <PackageReference Include="System.Text.Json" Version="9.0.2" />
   </ItemGroup>
